--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
                                                    <!--Footer part -->
 
-      <footer class="bg-white font-sans dark:bg-green-600 w-full mt-96">
+      <footer class="bg-green-600 font-sans dark:bg-green-600 w-full mt-96">
         <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
             <div class="md:flex md:justify-between">
               <div class="mb-6 md:mb-0">
