--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
       <div class="grid-cols-1 sm:grid md:grid-cols-2 ">
         <div
-          class="mx-auto mt-72 w-96 h-96 flex flex-col self-start rounded-lg bg-gray-400 shadow-[0_2px_15px_-3px_rgba(0,0,0,0.09),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-green-600 sm:shrink-0 sm:grow sm:basis-0">
+          class="mx-auto mt-72 w-96 h-96 flex flex-col self-start rounded-lg bg-green-600 shadow-[0_2px_15px_-3px_rgba(0,0,0,0.09),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-green-600 sm:shrink-0 sm:grow sm:basis-0">
           <a href="#!">
             <img
               class="rounded-t-lg h-60 w-96 "
