--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+\<!DOCTYPE html>
 <html>
     <head>
 <link href="./tailwindstyle.css" rel="stylesheet">
@@ -49,7 +49,7 @@
 
       <div class="grid-cols-1 sm:grid md:grid-cols-2 ">
         <div
-          class="ml-auto mr-auto mt-72 w-96 h-96 flex flex-col self-start rounded-lg bg-green-600 shadow-[0_2px_15px_-3px_rgba(0,0,0,0.09),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-green-600 sm:shrink-0 sm:grow sm:basis-0">
+          class="ml-auto mr-auto mt-72 w-72 h-96 flex flex-col self-start rounded-lg bg-green-600 shadow-[0_2px_15px_-3px_rgba(0,0,0,0.09),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-green-600 sm:shrink-0 sm:grow sm:basis-0">
           <a href="#!">
             <img
               class="rounded-t-lg h-56 w-96 "
